influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__enterprise__tests__merge_catalog_with_new_database-2.snap
---
source: influxdb3_catalog/src/catalog/enterprise.rs
expression: a_to_b_map
snapshot_kind: text
---
dbs:
  0: 1
  3: 2
tables:
  0: 1
columns:
  0: 3
  1: 4
  2: 5
