influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__enterprise__tests__merge_catalog_with_new_table.snap
---
source: influxdb3_catalog/src/catalog/enterprise.rs
expression: b_to_a_map
snapshot_kind: text
---
dbs:
  1: 0
tables:
  1: 0
  2: 3
columns:
  3: 0
  4: 1
  5: 2
  6: 9
  7: 8
