influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__enterprise__tests__merge_db_schema_not_updating_all_tables.snap
---
source: influxdb3_catalog/src/catalog/enterprise.rs
expression: b_to_a_map
snapshot_kind: text
---
dbs:
  1: 0
tables:
  1: 0
  3: 2
columns:
  3: 0
  4: 1
  5: 2
  100: 10
  200: 20
  300: 30
  400: 6
