influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__enterprise__tests__merge_two_catalogs_with_same_content_different_ids-3.snap
---
source: influxdb3_catalog/src/catalog/enterprise.rs
expression: b
---
databases:
  - - 1
    - id: 1
      name: foo
      tables:
        - - 1
          - table_id: 1
            table_name: bar
            key:
              - 3
              - 4
            cols:
              - - 5
                - name: f1
                  id: 5
                  type: bool
                  influx_type: field
                  nullable: true
              - - 3
                - name: t1
                  id: 3
                  type:
                    dict:
                      - i32
                      - str
                  influx_type: tag
                  nullable: false
              - - 4
                - name: t2
                  id: 4
                  type:
                    dict:
                      - i32
                      - str
                  influx_type: tag
                  nullable: false
            deleted: false
      processing_engine_plugins: []
      processing_engine_triggers: []
      deleted: false
sequence: 1
writer_id: host-b
instance_id: instance-b
db_map:
  - db_id: 1
    name: foo
