influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__enterprise__tests__merge_two_catalogs_with_same_content_different_ids-4.snap
---
source: influxdb3_catalog/src/catalog/enterprise.rs
expression: a_to_b_map
snapshot_kind: text
---
dbs:
  0: 1
tables:
  0: 1
columns:
  0: 3
  1: 4
  2: 5
