influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__enterprise__tests__merge_two_catalogs_with_same_content_different_ids.snap
---
source: influxdb3_catalog/src/catalog/enterprise.rs
expression: a
---
databases:
  - - 0
    - id: 0
      name: foo
      tables:
        - - 0
          - table_id: 0
            table_name: bar
            key:
              - 0
              - 1
            cols:
              - - 2
                - name: f1
                  id: 2
                  type: bool
                  influx_type: field
                  nullable: true
              - - 0
                - name: t1
                  id: 0
                  type:
                    dict:
                      - i32
                      - str
                  influx_type: tag
                  nullable: true
              - - 1
                - name: t2
                  id: 1
                  type:
                    dict:
                      - i32
                      - str
                  influx_type: tag
                  nullable: true
            deleted: false
      processing_engine_triggers: []
      deleted: false
sequence: 1
node_id: host-a
instance_id: instance-a
