influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__enterprise__tests__merge_two_identical_catalogs-2.snap
---
source: influxdb3_catalog/src/catalog/enterprise.rs
expression: b_to_a_map
snapshot_kind: text
---
dbs:
  0: 0
tables:
  0: 0
columns:
  0: 0
  1: 1
  2: 2
