influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__enterprise__tests__merge_two_identical_catalogs-3.snap
---
source: influxdb3_catalog/src/catalog/enterprise.rs
expression: b
---
databases:
  - - 0
    - id: 0
      name: foo
      tables:
        - - 0
          - table_id: 0
            table_name: bar
            key:
              - 0
              - 1
            cols:
              - - 2
                - name: f1
                  id: 2
                  type: bool
                  influx_type: field
                  nullable: true
              - - 0
                - name: t1
                  id: 0
                  type:
                    dict:
                      - i32
                      - str
                  influx_type: tag
                  nullable: false
              - - 1
                - name: t2
                  id: 1
                  type:
                    dict:
                      - i32
                      - str
                  influx_type: tag
                  nullable: false
            deleted: false
      processing_engine_plugins: []
      processing_engine_triggers: []
      deleted: false
sequence: 1
writer_id: host-a
instance_id: instance-a
db_map:
  - db_id: 0
    name: foo
